2006-09-10 04:21:25  Sean Middleditch <elanthis@awesomeplay.com>

  * Added a new manifest.txt parser/generator.  These files are
    used to list other files.  Brilliant, isn't it?
  * Updated the script loader, AI loader, HTML template loader,
    and help file loader to use the new manifest.txt support
    instead of using a customer file or opendir().
  * Moved files around a bit, so that each set of files is in its
    own directory and thus can have its own manifest.txt.

2006-09-10 01:29:57  Sean Middleditch <elanthis@awesomeplay.com>

  * Fixed some accidental replacements of "character" with
    "creature."
  * Fixed an echo handling bug.

2006-09-08 16:48:12  Sean Middleditch <elanthis@awesomeplay.com>

  * Cleaned up the socket classes and their interfaces.

2006-09-07 02:59:47  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed support for ZMP net.awemud package, since it doesn't
    really exist anywhere.
  * Player now attaches to a IPlayerConnection object.  Basically,
    this allows us to have multiple protocols for players.

2006-09-06 00:20:31  Sean Middleditch <elanthis@awesomeplay.com>

  * Parse system now only accepts named parameters; they may no
    longer be accessed by index, and every parameter must have
    a name.
  * Updated all script functions/methods that used the parsing
    engine to take alternative string/value pairs in their variable
    argument list.
  * Updated all date and source to replace use of indexed parse
    parameters with named parameters.

2006-09-05 11:45:41  Sean Middleditch <elanthis@awesomeplay.com>

  * Fix name of awemud.conf parameter for setting the HTML template
    directory.
  * Make the awemud start script work properly again.

2006-09-05 03:10:29  Sean Middleditch <elanthis@awesomeplay.com>

  * Split the data/html file into separate .tpl files in data/html/.

2006-09-04 20:39:32  Sean Middleditch <elanthis@awesomeplay.com>

  * Made _ a valid character for a parse name.