@@ -1,2 +1,2 @@
-time.current = "2456/05/07 05.3552"
+time.current = "2456/05/07 05.3593"
 # vim: set shiftwidth=2 tabstop=2 expandtab:
