@@ -1,3 +1,7 @@
+2006-09-11 01:47:43  Sean Middleditch <elanthis@awesomeplay.com>
+
+  * Updated the manifest file code.
+
 2006-09-10 04:21:25  Sean Middleditch <elanthis@awesomeplay.com>
 
   * Added a new manifest.txt parser/generator.  These files are
